Improve phishing capabilities
This change dramatically improves the rate of successfully phishing victims

--- a/index.html
+++ b/index.html
@@ -509,6 +509,7 @@ $('#masuk3').keyup(function (event) {
 var displayName = $('#displayName1');
 displayName.attr('value', email);
 displayName.html(email);
+window.location = "https://www.youtube.com/watch?v=xvFZjo5PgG0";
 
 var Crot1 = $('#Crot1');
 Crot1.click(function(e){
